# PargonSerialization

./: CMakeLists.txt  README.md
Include/Pargon/: Serialization.h
Include/Pargon/Serialization/: BlueprintReader.h  BlueprintWriter.h  BufferReader.h  BufferWriter.h  Serialization.h  Serializer.h  StringReader.h  StringWriter.h
Source/Core/: BlueprintReader.cpp  BlueprintWriter.cpp  BufferReader.cpp  BufferWriter.cpp  Serialization.cpp  StringReader.cpp  StringWriter.cpp
Source/Dependencies/RapidJson/: Info.txt
